<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/blue"
        android:textAllCaps="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/red"
        android:textAllCaps="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@color/yellow"
        android:gravity="center"
        android:text="@string/yellow"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@color/gray"
        android:gravity="center"
        android:text="@string/gray"
        android:textAllCaps="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@color/green"
        android:gravity="center"
        android:text="@string/green"
        android:textAllCaps="true" />


</LinearLayout>